# qt_task_final

./: CMakeLists.txt  Menu.qml  PaintArea.qml  README.md  Session.qml  cell.cpp  cell.h  cell.qml  dfsthread.cpp  dfsthread.h  fielddep.cpp  fielddep.h  fieldmodel.cpp  fieldmodel.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.ui  netdialog.cpp  netdialog.h  server-dlg.cpp  sessionmodel.cpp  sessionmodel.h  window.qml
gameserver/: CMakeLists.txt  server-dlg.cpp  server-dlg.h  server-dlg.ui  serverlauncher.cpp
qml/: Cell.qml  Menu.qml  PaintArea.qml  Session.qml  createField.js  window.qml
